--- a/Section 03/exercise.ipynb
+++ b/Section 03/exercise.ipynb
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
     "    def __str__(self):\n",
-    "        return \"My id number is {}\".format(self.id)\n",
+    "        return \"{} id number is {}\".format(self.name, self.id)\n",
     "\n",
     "    def __init__(self, id, name):\n",
     "        self.id = id\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -88,7 +88,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Current id number is 0\nMy id number is 0\nMy id number is 1\nCurrent id number is 2\n"
+     "text": "Current id number is 0\ngustavo id number is 0\nrina id number is 1\nCurrent id number is 2\n"
     }
    ],
    "source": [
